big refactoring. phase1. naming to penteract